src/css/body.css
/* --- FONT FAMILY --- */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

body {
  overflow-x: hidden;
  font-family: 'Playfair Display', serif;
  font-family: 'Montserrat', sans-serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.5;
  color: #f0f0f0;
}

::selection {
  background: #DEB887;
  color: white;
}

/* --- NAVIGATION BAR --- */
/*
#mainNav .navbar-brand.active, #mainNav .navbar-brand:active, #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
  color: #251667;
}
*/
#mainNav {
  background-color: transparent;
  padding: 2%;
}

#mainNav .navbar-toggler {
  font-size: 12px;
  padding: 13px;
  text-transform: uppercase;
  color: white;
  border: 0;
  background-color: #DEB887;
  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

#mainNav .navbar-nav .nav-item .nav-link {
  font-size: 90%;
  font-weight: 400;
  padding: 0.75em 0;
  letter-spacing: 1px;
  color: black;
  background-color: transparent;
  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

#mainNav .navbar-nav .nav-item .nav-link:hover {
  color: #d1a771;
  background-color: white;
  border-bottom: 3px solid #DEB887;
}

#mainNav .nav-link.active {
  color: #d1a771;
  background-color: transparent;
  border-bottom: 3px solid #DEB887;
}

@media (max-width: 991px) {
  #mainNav .navbar-nav .nav-item .nav-link {
    background-color: white;
  }

  #mainNav .navbar-nav .nav-item .nav-link {
    max-width: 28%;
  }
}

@media (min-width: 992px) {
  #mainNav {
    padding-top: 25px;
    padding-bottom: 25px;
    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
    -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
    transition: padding-top 0.3s, padding-bottom 0.3s;
    background-color: transparent;
  }

  /*
  #mainNav .navbar-brand {
    font-size: 1.75em;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    transition: all 0.3s;
  }
  */
  #mainNav .navbar-nav .nav-item .nav-link {
    padding: 1.1em 1em !important;
  }

  #mainNav.navbar-shrink {
    padding-top: 0;
    padding-bottom: 0;
    background-color: white;
  }

  #mainNav.navbar-shrink .navbar-brand {
    font-size: 1.25em;
    padding: 12px 0;
  }
}

/* HOME PAGE */
#home {
  text-align: center;
  color: black;
  position: relative;
  overflow: hidden;
  margin-bottom: 25px;
}

.home-text {
  color: #0d0d0d;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -55%);
  max-width: 800px;
  padding: 2em 3em;
  text-align: center;
  font-family: 'Playfair Display', serif;
  display: inline;
  line-height: 1.25;
  margin-bottom: 25px;
}

@media (min-width: 800px) {
  .home-text {
    min-width: 700px;
  }
}

#first-name {
  color: black;
  font-size: 72px;
  font-weight: 700;
}

#last-name {
  font-size: 60px;
  font-weight: 600;
  margin-bottom: 25px;
}

@media (max-width: 800px) {
  .home-text {
    padding: 2em 0em;
  }

  #last-name {
    font-size: 28px;
  }
}

/* Social buttons */
.social {
  color: #1a1a1a;
  padding-left: 20px;
  padding-right: 20px;
}

.social:hover {
  color: #DEB887;
}

.intro-text {
  color: black;
  font-size: 20px;
  font-family: 'Montserrat', sans-serif;
  padding-top: 30px;
}

/* PARTICLES JS */
#particles-js {
  width: 100%;
  height: 100vh;
  background-color: white;
  background-image: url('');
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: no-repeat;
}

/* About Me */
.about-section, .experience-section {
  padding: 100px;
  font-family: 'Montserrat', sans-serif;
}

.about-title, .experience-title {
  font-family: 'Playfair Display', serif;
  font-size: 60px;
  font-weight: 700;
}

.about-text {
  font-family: 'Montserrat', sans-serif;
  font-size: 18px;
}

.i-am {
  max-width: 650px;
}

.i-am-item {
  margin: 10px;
}

@media (max-width: 1199px) {
  #pfp {
    margin-top: 20%;
  }
}

@media (max-width: 991px) {
  #pfp {
    margin-top: auto;
    margin-bottom: 30px;
    max-width: 90%;
  }
}

/* Experience - Timeline */
.experience-section {
  padding-bottom: 50px;
}

.timeline {
  margin-bottom: 100px;
}

.timeline ul {
  padding: 0px 0;
}

.timeline ul li {
  list-style-type: none;
  position: relative;
  width: 6px;
  margin: 0 auto;
  padding-top: 50px;
  background: silver;
}

.timeline ul li::after {
  content: '';
  position: absolute;
  left: 50%;
  bottom: 0;
  transform: translateX(-50%);
  width: 30px;
  height: 30px;
  border-radius: 50%;
  background: white;
}

.timeline ul li div {
  position: relative;
  bottom: 0;
  width: 400px;
  padding: 15px;
  background: transparent;
}

.timeline ul li::before {
  content: '';
  position: absolute;
  bottom: 7px;
  width: 0;
  height: 0;
  border-style: solid;
}

.timeline ul li:nth-child(odd) div {
  left: 45px;
}

.timeline ul li:nth-child(odd) div::before {
  left: -15px;
  border-width: 8px 16px 8px 0;
  border-color: transparent;
}

.timeline ul li:nth-child(even) div {
  left: -439px;
}

.timeline ul li:nth-child(even) div::before {
  right: -15px;
  border-width: 8px 0 8px 16px;
  border-color: transparent;
}

time {
  display: block;
  font-size: 1.2rem;
  font-weight: bold;
  margin-bottom: 8px;
  font-family: 'Playfair Display', serif;
  font-size: 26px;
  font-weight: 700;
}

/* Animation for timeline */
.timeline {
  padding: 100px;
  padding-top: 0px;
}

.timeline ul li::after {
  transition: background .5s ease-in-out;
}

.timeline ul li.in-view::after {
  background: #DEB887;
  border: 3px;
  border-color: black;
}

.timeline ul li div {
  visibility: hidden;
  opacity: 0;
  transition: all .5s ease-in-out;
  font-family: 'Montserrat', sans-serif;
  font-size: 15px;
}

.timeline ul li:nth-child(odd) div {
  transform: translate3d(200px, 0, 0);
}

@media screen and (min-width: 601px) {
  .timeline ul li:nth-child(even) div {
    transform: translate3d(-200px, 0, 0);
  }
}

@media screen and (max-width: 600px) {
  .timeline ul li:nth-child(even) div {
    transform: translate3d(200px, 0, 0);
  }
}

.timeline ul li.in-view div {
  transform: none;
  visibility: visible;
  opacity: 1;
}

/* Timeline browser compatibility */
@media screen and (max-width: 960px) {
  .timeline ul li div {
    width: 250px;
  }

  .timeline ul li:nth-child(even) div {
    left: -289px;
    /* 250 + 45 - 6 */
  }
}

@media screen and (max-width: 600px) {
  #ex {
    text-align: left;
  }

  .timeline ul li {
    margin-left: -60px;
  }

  .timeline ul li div {
    width: calc(100vw - 91px);
  }

  .timeline ul li:nth-child(even) div {
    left: 45px;
  }

  .timeline ul li:nth-child(even) div::before {
    left: -15px;
    border-width: 8px 16px 8px 0;
    border-color: transparent;
  }
}

/* Footer */

footer {
  text-align: center;
  padding: 75px;
}

#copyright {
  font-family: 'Montserrat', sans-serif;
}

